[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "serve-common"
version = "3.0.0"
requires-python = ">=3.9.2"

dependencies = [
	"falcon>=3.1.1",
	"tomli>=2.0.1 ; python_version < '3.11'",
	"spectree>=1.1.0",
	"pydantic>=1.10.8",
	"overrides>=7.3.1"
]
